# jacaranda_studio

./: CMakeLists.txt
models/: cube.blend
src/: launcher.c  les4.c
src/core/: ioutil.c  ioutil.h  shader.c  shader.h
src/math/: math.c  math.h  matrix.c  matrix.h  vector.c  vector.h
src/shaders/: fragment.shader  vertex.shader
